--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,7 @@
   "author": "Pengsha Ying <yingfusheng@foxmail.com>",
   "description": "📹 Vue composition for easily recording screen using MediaStream APIs.",
   "repository": "git@github.com:yingpengsha/use-screen-recorder-composition.git",
+  "homepage": "https://github.com/yingpengsha/use-screen-recorder-composition",
   "publishConfig": {
     "access": "public"
   },
