--- a/packages/playground/vue-2/package.json
+++ b/packages/playground/vue-2/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1",
-    "use-screen-recorder-composition": "workspace",
+    "use-screen-recorder-composition": "workspace:*",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2"
