--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "author": "Pengsha Ying <yingfusheng@foxmail.com>",
-  "description": "📹 Vue composition for easily recording screen using MediaStream APIs.",
+  "description": "📹 Vue Composition API for easily recording screen using MediaStream APIs.",
   "repository": "git@github.com:yingpengsha/use-screen-recorder-composition.git",
   "homepage": "https://github.com/yingpengsha/use-screen-recorder-composition#readme",
   "publishConfig": {
