--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "author": "Pengsha Ying <yingfusheng@foxmail.com>",
   "description": "📹 Vue Composition API for easily recording screen using MediaStream APIs.",
+  "keywords": ["vuejs", "vue", "recorder", "mediastream", "screenrecorder", "composition-api"],
   "repository": "git@github.com:yingpengsha/use-screen-recorder-composition.git",
   "homepage": "https://github.com/yingpengsha/use-screen-recorder-composition#readme",
   "publishConfig": {
