--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,17 @@
 {
   "name": "use-screen-recorder-composition",
-  "version": "0.1.0",
+  "version": "0.1.1-beta.1",
   "license": "MIT",
   "author": "Pengsha Ying <yingfusheng@foxmail.com>",
   "description": "📹 Vue Composition API for easily recording screen using MediaStream APIs.",
-  "keywords": ["vuejs", "vue", "recorder", "mediastream", "screenrecorder", "composition-api"],
+  "keywords": [
+    "vuejs",
+    "vue",
+    "recorder",
+    "mediastream",
+    "screenrecorder",
+    "composition-api"
+  ],
   "repository": "git@github.com:yingpengsha/use-screen-recorder-composition.git",
   "homepage": "https://github.com/yingpengsha/use-screen-recorder-composition#readme",
   "publishConfig": {
