chore: add dts file to files field

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,8 @@
     "access": "public"
   },
   "files": [
-    "dist"
+    "dist",
+    "dist/esm/index.d.ts"
   ],
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
