--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-screen-recorder-composition",
-  "version": "0.1.1-beta.3",
+  "version": "0.1.1-beta.4",
   "license": "MIT",
   "author": "Pengsha Ying <yingfusheng@foxmail.com>",
   "description": "📹 Vue Composition API for easily recording screen using MediaStream APIs.",
@@ -18,8 +18,7 @@
     "access": "public"
   },
   "files": [
-    "dist",
-    "dist/esm/index.d.ts"
+    "dist"
   ],
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -29,7 +28,7 @@
     "build": "rimraf ./dist && pnpm run build:esm && pnpm run build:cjs",
     "build:esm": "tsc --module es2015 --outDir dist/esm -d",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
-    "release": "pnpm run build && bump --commit --push --tag && pnpm publish",
+    "release": "bump --commit --push --tag && pnpm publish",
     "reset": "rimraf ./node_modules && pnpm install",
     "prepare": "pnpm run build"
   },
