--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-screen-recorder-composition",
-  "version": "0.1.1-beta.4",
+  "version": "0.1.1",
   "license": "MIT",
   "author": "Pengsha Ying <yingfusheng@foxmail.com>",
   "description": "📹 Vue Composition API for easily recording screen using MediaStream APIs.",
